# pipecat-respeecher

./: CHANGELOG.md  LICENSE  README.md  bot.py  env.example  example-ukrainian.py  example.py  pyproject.toml
src/pipecat_respeecher/: __init__.py  tts.py
