[project]
name = "pipecat-respeecher"
version = "0.1.2"
description = "Respeecher real-time TTS plugin for Pipecat"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["tts", "pipecat-ai", "pipecat"]
authors = [
    {name = "Respeecher", email = "nv@respeecher.com"}
]
maintainers = [
    {name = "Respeecher", email = "nv@respeecher.com"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pipecat-ai>=0.0.99",
    "respeecher>=1.1.9",
]

[dependency-groups]
debug = []
dev = [
    "pipecat-ai-whisker>=0.0.10",
    "pipecat-ai[daily,deepgram,google,local-smart-turn-v3,runner,silero,webrtc]",
]

[project.urls]
Homepage = "https://www.respeecher.com/real-time-tts-api"
Documentation = "https://space.respeecher.com/docs"
Source = "https://github.com/respeecher/pipecat-respeecher"
Changelog = "https://github.com/respeecher/pipecat-respeecher/blob/main/CHANGELOG.md"

[tool.ruff.lint]
ignore = ["E402"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
